port r51924 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51925 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,14 @@
 		CHANGES IN R VERSION 2.11.0 patched
 
 
+DEPRECATED & DEFUNCT
+
+    o	Use of .C for C++ code in packages is now deprecated: it has
+	caused problems for some 'make's on case-insensitive file
+	systems (although it currently works with the recommended
+	toolkits).
+
+
 BUG FIXES
 
     o	The C function mkCharLenCE now no longer reads past 'len' bytes
