remove use of .C for C++ code
git-svn-id: https://svn.r-project.org/R/trunk@51926 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -93,6 +93,8 @@ DEPRECATED & DEFUNCT
     o	Supplying the parser with a string containing both octal/hex and
 	Unicode escapes is now an error.
 
+    o	Extension .C for C++ code files in packages is now defunct.
+
 
 PACKAGE INSTALLATION
 
