port r51938 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51939 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -60,6 +60,10 @@ BUG FIXES
     o	cut(d, breaks = <n>)  now also works for "Date" or "POSIXt"
         argument d.  (PR#14288)
 
+    o	memDecompress() could decompress incompletely rare xz-compressed
+	input due to incorrect documentation of xz utils.  (Report
+	and patch from Olaf Mersmann.)
+
 
 
 		CHANGES IN R VERSION 2.11.0
