switch to combined windows binary packages as the default type
git-svn-id: https://svn.r-project.org/R/trunk@51946 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1865,8 +1865,8 @@ Windows.
 @item 
 @code{"win64.binary"}: located at @file{bin/windows64/contrib/@var{x.y}}
 for @R{} versions @var{x.y.z} and containing @file{.zip} files for
-64-bit Windows.  (This may be merged with @code{"win.binary"} before the
-release of R 2.12.0.)
+64-bit Windows.  (This was used for @R{} 2.11.x, but is no longer the
+default for 64-bit Windows.)
 
 @item 
 @code{"mac.binary"}: located at
