--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -46,8 +46,8 @@ INSTALLATION
 	is now based on gcc 4.5.0: see the 'R Installation and
 	Administration Manual'.
 
-    o	It is now possible to build R and the Inno Setup installer
-	without Perl.
+    o	It is now possible to build R and the Inno Setup-based
+	installer without Perl.
 
 
 64-bit NEWS
@@ -63,10 +63,13 @@ INSTALLATION
 	options to install either or both of 32- and 64-bit R: the
 	current default is to install both.
 
-    o	The 32-bit CRANextras repository is a prototype of a merged
-	repository.  All the packages are available from a 32-bit
-	build, and those appropriate to a 64-bit build (e.g. not
-	BRugs) are available with type="win.binary".
+    o	The default package type is "win.binary" on both 32- and
+	64-bit builds: a single repository contains binary packages
+	for both architectures.  This is in place for CRAN and
+	CRANextras: type = "win64.binary" can still be used for
+	repositories which follow the R 2.11.x convention.  With the
+	default filters (see ?available.packages) packages will only
+	be offered if they are available for the current architecture.
 
     o	For those building R from the sources, the 64-bit Tcl binary
 	distribution is now in file R64a_Tcl_8-5-8.zip and contains
@@ -75,8 +78,9 @@ INSTALLATION
 
 PACKAGE INSTALLATION
 
-    o	Environment variable RHOME is no longer set when a package is
-	installed: use R_HOME instead (and depend on R (>= 2.9) ).
+    o	The deprecated environment variable RHOME is no longer set when
+	a package is installed: use R_HOME instead (and depend on R
+	(>= 2.9) ).
 
 
 
