call validObject() from initialize methods--fixes bug 14284 but not for the problem with mix-ins later noted
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51947 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -71,6 +71,8 @@ BUG FIXES
 	input due to incorrect documentation of xz utils.  (Report
 	and patch from Olaf Mersmann.)
 
+    o	the initialize() methods for "matrix", "array", and "ts" have been
+        fixed to call validObject() (PR#14284)
 
 
 		CHANGES IN R VERSION 2.11.0
