Add optional blinking cursor, to help with screen readers.
git-svn-id: https://svn.r-project.org/R/trunk@51948 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -38,6 +38,9 @@ NEW FEATURES
 	disabled before release.
 
     o	R CMD INSTALL can install zipfiles as binary packages.
+    
+    o	The Rgui console now has an optional blinking caret (cursor)
+    	to assist screen readers for the visually impaired.
 
 
 INSTALLATION
