filter installed.packages() on recorded subarch
git-svn-id: https://svn.r-project.org/R/trunk@51952 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -89,6 +89,9 @@ NEW FEATURES
     o	.Renviron can have architecture-specific versions such as
 	.Renviron.i386 on systems with sub-architectures.
 
+    o	installed.packages() has a new argumnt 'subarch' to filter on
+	sub-architecture.
+
 
 DEPRECATED & DEFUNCT
 
