use print() method for packageStatus
git-svn-id: https://svn.r-project.org/R/trunk@51954 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -89,8 +89,11 @@ NEW FEATURES
     o	.Renviron can have architecture-specific versions such as
 	.Renviron.i386 on systems with sub-architectures.
 
-    o	installed.packages() has a new argumnt 'subarch' to filter on
+    o	installed.packages() has a new argument 'subarch' to filter on
 	sub-architecture.
+
+    o	The summary() method for packageStatus() now has a separate
+	print() method.
 
 
 DEPRECATED & DEFUNCT
