add R CMD check --extra-arch
git-svn-id: https://svn.r-project.org/R/trunk@51957 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -125,6 +125,12 @@ PACKAGE INSTALLATION
 	unless --no-lock is specified.
 
 
+UTILITIES
+
+    o	R CMD check has a new argument --extra-arch to confine tests
+	to those needed to check an additional sub-architecture.
+
+
 C-LEVEL FACILITIES
 
     o	lang5() and lang6() {in addition to pre-existing lang[1-4]()}
