port installation of zipfiles by R CMD INSTALL
make R CMD INSTALL without --no-multiarch go through the single-arch
code branch if there is only one arch.


git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51962 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -71,8 +71,14 @@ BUG FIXES
 	input due to incorrect documentation of xz utils.  (Report
 	and patch from Olaf Mersmann.)
 
-    o	the initialize() methods for "matrix", "array", and "ts" have been
-        fixed to call validObject() (PR#14284)
+    o	The S4 initialize() methods for "matrix", "array", and "ts" have
+ 	been fixed to call validObject(). (PR#14284)
+
+    o	R CMD INSTALL now behaves the same way with or without
+	--no-multiarch on platforms with only one installed
+	architecture.  (It used to clean the src directory without
+	--no-multiarch.)
+
 
 
 		CHANGES IN R VERSION 2.11.0
