--- a/NEWS
+++ b/NEWS
@@ -830,6 +830,9 @@ BUG FIXES
 	given a list as 'x', they now check that the list has suitable
 	names and give a more informative error message.  (PR#13936)
 
+    o	[<-.data.frame was not quite careful enough in assigning (and
+        potentially deleting) columns right-to-left. (PR#14263)
+
 
 
 
