fix mixins with matrix, etc.; add tests/ with test for same
git-svn-id: https://svn.r-project.org/R/trunk@51966 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -181,6 +181,10 @@ BUG FIXES
     o	source(echo=TRUE) failed to echo comments that followed the
     	last statement in a file.
 
+    o	S4 classes that contained one of matrix, array, ts and also
+        another class now accept superclass objects in new(). Also
+        fixes failure to call validObject() for these classes.
+
 
 
 
