ported r51967 [rbeta() -> NA] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51968 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -49,7 +49,7 @@ BUG FIXES
 
     o	Rhttpd no longer crashes due to SIGPIPE when the client closes
 	the connection prematurely.  (PR#14266)
-	
+
     o	format.POSIXlt() could cause a stack overflow and crash when used on
     	very long vectors.  (PR#14267)
 
@@ -78,6 +78,9 @@ BUG FIXES
 	--no-multiarch on platforms with only one installed
 	architecture.  (It used to clean the src directory without
 	--no-multiarch.)
+
+    o	rbeta(n, a,b) no longer occasionally returns NaN for a >> 1 > b.
+	(PR#14291)
 
 
 
