more on multiarch
git-svn-id: https://svn.r-project.org/R/trunk@51970 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1926,11 +1926,14 @@ R --arch @var{arch} CMD check -l @var{libdir} --extra-arch --install=check:@var{
 
 @noindent
 where @option{--extra-arch} selects only those checks which depend on
-the installed code and not those which analyse the sources.  On Mac OS X
-and other Unix-alikes the architecture to run is selected by
-@option{--arch}: this can also be used on Windows with
-@file{@var{R_HOME}/bin/R.exe}, but it is more usual to select the path
-to the @command{Rcmd.exe} of the desired architecture.
+the installed code and not those which analyse the sources.  (If
+multiple sub-architectures fail only because they need different
+settings, e.g.@: environment variables, @option{--no-multilib} may need
+to be added to the @code{INSTALL} lines.)  On Mac OS X and other
+Unix-alikes the architecture to run is selected by @option{--arch}: this
+can also be used on Windows with @file{@var{R_HOME}/bin/R.exe}, but it
+is more usual to select the path to the @command{Rcmd.exe} of the
+desired architecture.
 
 So on Windows to install, check and package for distribution a source
 package from a tarball which has been tested on another platform one
@@ -1947,7 +1950,7 @@ might use
 where the second line is not often needed, and when it is one might want
 to run the second and fourth lines in a different shell with different
 settings for environment variables and the path (to find external
-software such as Gtk+).
+software, notably for Gtk+).
 
 @node Internationalization, Choosing between 32- and 64-bit builds, Add-on packages, Top
 @chapter Internationalization and Localization
