--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1010,7 +1010,7 @@ GCC.
 There are some macros which are built whilst configuring the building of
 @R{} itself and are stored in
 @file{@var{R_HOME}/etc@var{R_ARCH}/Makeconf}.  That makefile is included
-as a @file{Makefile} @emph{before} @file{Makevars[.win]}, and so the
+as a @file{Makefile} @emph{after} @file{Makevars[.win]}, and the
 macros it defines can be used in the latter.  These include
 
 @table @code
@@ -1145,6 +1145,18 @@ $(R_HOME)/bin$(R_ARCH_BIN)/Rscript -e '@var{R expression}'
 @noindent
 where @code{$(R_ARCH_BIN)} is only needed currently on Windows.
 
+Since @file{Makeconf} is included after @file{Makevars[.win]}, the values
+of the macros it defines cannot be used in GNU-style conditionals.  However,
+environment variables can be and so for example a way on Windows to
+select different macros for 32- and 64-bit code is
+
+@example
+ifeq "$@{R_ARCH@}" "/x64"
+PKG_LIBS = @var{value for x64 Windows}
+else
+PKG_LIBS = @var{value for i386 Windows}
+endif
+@end example
 
 @node Configure example, Using F95 code, Using Makevars, Configure and cleanup
 @subsection Configure example
