normalizePath now generates a warning instead of an error
git-svn-id: https://svn.r-project.org/R/trunk@51977 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -36,6 +36,10 @@ NEW FEATURES
     
     o	The Rgui console now has an optional blinking caret (cursor)
     	to assist screen readers for the visually impaired.
+    	
+    o	normalizePath() now signals a warning instead of an error
+    	when the input path does not exist.  It attempts partial
+    	normalization, or if that fails, returns the original input.
 
 
 INSTALLATION
