add print method for summary.default
git-svn-id: https://svn.r-project.org/R/trunk@51978 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -95,6 +95,10 @@ NEW FEATURES
     o	The summary() method for packageStatus() now has a separate
 	print() method.
 
+    o	The default summary() method returns an object inheriting from
+	class "summaryDefault" which has a separate print() method
+	that calls zapsmall() for numeric/complex values.
+
 
 DEPRECATED & DEFUNCT
 
